--- a/src/Resources/translations/messages+intl-icu.en.yaml
+++ b/src/Resources/translations/messages+intl-icu.en.yaml
@@ -15,5 +15,5 @@ webgriffe_sylius_italian_invoiceable_order:
         label: 'PEC address'
   ui:
     address:
-      tax_code_short: 'CF'
-      vat_number_short: 'P.IVA'
+      tax_code_short: 'Tax Code'
+      vat_number_short: 'VAT No'
