--- a/src/Resources/translations/validators+intl-icu.en.yaml
+++ b/src/Resources/translations/validators+intl-icu.en.yaml
@@ -16,7 +16,7 @@ webgriffe_sylius_italian_invoiceable_order:
         pec_address:
             valid: 'Please enter a valid PEC address.'
         italian_sdi_code_and_pec_address:
-            not_both_blank: 'At least one of PEC address or SDI code is required'
+            not_both_blank: 'At least one between PEC address and SDI code is required'
     order:
         billing_recipient_type:
             not_blank: 'A billing recipient type (company or individual) should be specified for the billing address of this order. Please go back to the checkout addressing step and specify a billing recipient type for the billing address.'
