--- a/src/Resources/translations/validators+intl-icu.it.yaml
+++ b/src/Resources/translations/validators+intl-icu.it.yaml
@@ -1,11 +1,15 @@
 webgriffe_sylius_italian_invoiceable_order:
     address:
+        company:
+            not_blank: 'Per favore, inserisci la ragione sociale dell''azienda.'        
         italian_tax_code:
             valid: 'Per favore, inserisci un codice fiscale valido.'
             not_blank: 'Il codice fiscale non dovrebbe essere vuoto.'
         italian_vat_number:
-            valid: 'Per favore, inserisci una partita IVA valida.'
+            valid: 'Per favore, inserisci una partita IVA italiana valida.'
             not_blank: 'La partita IVA non dovrebbe essere vuota.'
+        european_vat_number:
+            valid: 'Per favore, inserisci una partita IVA europea valida.'
         italian_sdi_code:
             valid: 'Per favore, inserisci un codice destinatario SDI valido.'
             not_blank: 'Il codice destinatario SDI non dovrebbe essere vuoto.'
@@ -16,7 +20,3 @@ webgriffe_sylius_italian_invoiceable_order:
         billing_recipient_type:
             not_blank: 'Un tipo di indirizzo di fatturazione (privato o azienda) dovrebbe essere specificato per questo ordine. Per favore, torna alla sezione d''inserimento dell''indirizzo nel checkout e specifica un tipo di indirizzo di fatturazione (privato o azienda).'
             choice: 'Il tipo di indirizzo di fatturazione dovrebbe essere uno tra: {{ choices }}.'
-
-
-
-
